--- a/wasm4/Cargo.toml
+++ b/wasm4/Cargo.toml
@@ -1,26 +1,29 @@
 [package]
 name = "wasm4"
 version = "0.1.0"
+edition = "2021"
+rust-version = "1.56"
+description = "WASM-4 bindings for Rust"
 authors = ["Daria Sukhonina <dariasukhonina@gmail.com>"]
 license = "ISC"
+documentation = "https://docs.rs/wasm4"
+homepage = "https://github.com/ZetaNumbers/wasm4-rs/tree/main/wasm4"
 repository = "https://github.com/ZetaNumbers/wasm4-rs"
-description = "WASM-4 bindings for Rust"
+readme = "../README.md"
 keywords = ["wasm-4", "wasm4"]
 categories = ["api-bindings", "wasm"]
-readme = "../README.md"
-edition = "2021"
 
 [dependencies]
 bitflags = "1.3.2"
 
 [dependencies.wasm4-sys]
 path = "../wasm4-sys"
-version = "^0.1.0"
+version = "0.1.0"
 
 [dependencies.wasm4-common]
 path = "../wasm4-common"
-version = "^0.1.0"
+version = "0.1.0"
 
 [dependencies.wasm4-impl]
 path = "../wasm4-impl"
-version = "^0.1.0"
+version = "0.1.0"
