--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
+          target: wasm32-unknown-unknown
           components: clippy
 
       - run: cargo clippy --workspace --all-features -- -D warnings
@@ -48,7 +49,7 @@ jobs:
           toolchain: nightly
           components: rustfmt
 
-      - run: cargo fmt --all --check
+      - run: cargo fmt --all -- --check
 
 
 
@@ -78,6 +79,7 @@ jobs:
         with:
           profile: minimal
           toolchain: nightly
+          target: wasm32-unknown-unknown
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
@@ -111,6 +113,7 @@ jobs:
         with:
           profile: minimal
           toolchain: ${{ matrix.toolchain }}
+          target: wasm32-unknown-unknown
           override: true
 
       - run: cargo test -p ${{ matrix.crate }} --all-features
@@ -141,5 +144,6 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
+          target: wasm32-unknown-unknown
 
       - run: cargo doc -p ${{ matrix.crate }} --all-features
