--- a/wasm4-impl/Cargo.toml
+++ b/wasm4-impl/Cargo.toml
@@ -24,6 +24,10 @@ proc-macro2 = "1.0.36"
 quote = "1.0.14"
 syn = { version = "1.0.85", features = ["extra-traits"] }
 
+# incorrect transitive minimals
+rayon = "1.5"
+tap = "1.0.1"
+
 [dependencies.wasm4-common]
 path = "../wasm4-common"
 version = "0.1.0"
